[project]
name = "purify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

# [tool.ruff.lint]
# # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# # McCabe complexity (`C901`) by default.
# select = ["ALL"]
# ignore = []   