[project]
name = "purify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "argparse>=1.4.0",
    "gymnasium>=1.1.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyrefly>=0.40.1",
    "ray[rllib]>=2.52.1",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.7.0",
    "tensorboard>=2.20.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]


[project.scripts]
purify = "purify:main"
plot = "plot:main"


[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"


[tool.ruff.lint]
# Wähle die wichtigsten Regel-Sets aus. Ein guter Start:
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes (logische Fehler wie unbenutzte Variablen)
    "W",  # pycodestyle warnings
    "I",  # isort (Import-Sortierung)
    "UP", # pyupgrade (modernisiert deinen Code)
]
